--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - "3.10"
   - "nightly"
 install:
-  - "pip install pytest"
-  - "pip install -r requirements.txt"
+  - "pip3 install pytest"
+  - "pip3 install -r requirements.txt"
 script: python -m pytest tests/
