--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python:
   - "3.10"
-  - "nightly"
 install:
-  - "pip3 install pytest"
-  - "pip3 install -r requirements.txt"
+  - "pip install pytest"
+  - "pip install -r requirements.txt"
 script: python -m pytest tests/
