--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 python:
-  - "3.10"
+  - '3.8'
+  - '3.10'
 install:
-  - "pip install pytest"
-  - "pip install -r requirements.txt"
+  - 'pip install pytest'
+  - 'pip install -r requirements.txt'
 script: python -m pytest tests/
